# python-vad

./: .gitignore  .travis.yml  LICENCE  README.md  example.ipynb  pyproject.toml  setup.py
.github/workflows/: lint.yaml  pypi.yaml  test.yaml
pyvad/: __init__.py  effects.py  trim.py  vad.py
test/: split_test.py  test.py  trim_test.py  util.py  vad_test.py
